# test-embedded-app-example

./: Cargo.toml  README.md
cross/: Cargo.toml
cross/.cargo/: config.toml
cross/app/: Cargo.toml
cross/app/src/: main.rs
cross/board/: Cargo.toml
cross/board/src/: lib.rs
cross/self-tests/: Cargo.toml
cross/self-tests/tests/: scd30.rs
host-target-tests/: Cargo.toml
host-target-tests/tests/: serial.rs
messages/: Cargo.toml
messages/src/: lib.rs
scd30/: Cargo.toml
scd30/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
