[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
name = "host-target-tests"
publish = false
version = "0.1.0"

[dev-dependencies]
anyhow = "1.0.38"
messages = { path = "../messages" }
parking_lot = "0.11.1"
postcard = { version = "0.5.2", features = ["alloc"] }
serialport = "4.0.0"
