[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
name = "messages"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.123", default-features = false }
serde_derive = "1.0.123"

[dev-dependencies]
postcard = { version = "0.5.2", features = ["alloc"] }
quickcheck = "1"
quickcheck_macros = "1"
